Replace 'fitWidth' button with 'fitHeight'

--- a/assets/index.html
+++ b/assets/index.html
@@ -248,7 +248,7 @@
                 <button id="zoomReset" class="btn ghost" title="Reset zoom">100%</button>
                 <button id="zoomIn" class="btn ghost" title="Zoom in">+</button>
                 <div class="sep"></div>
-                <button id="fitWidth" class="btn ghost" title="Fit to width">Fit width</button>
+                <button id="fitHeight" class="btn ghost" title="Fit to width">Fit width</button>
                 <button id="fitHeight" class="btn ghost" title="Fit height">Fit height</button>
                 <div class="grow"></div>
                 <button id="reloadBtn" class="btn ghost" title="Force reload from diagram.mmd">Reload</button>
