Change fitWidthBtn to fitHeightBtn

--- a/assets/index.html
+++ b/assets/index.html
@@ -274,7 +274,7 @@
         const zoomInBtn = $('zoomIn');
         const zoomOutBtn = $('zoomOut');
         const zoomResetBtn = $('zoomReset');
-        const fitWidthBtn = $('fitWidth');
+        const fitWidthBtn = $('fitHeight');
         const fitHeightBtn = $('fitHeight');
         const reloadBtn = $('reloadBtn');
         const exportSvgBtn = $('exportSvgBtn');
