fit width -> fit height

--- a/assets/index.html
+++ b/assets/index.html
@@ -248,8 +248,8 @@
                 <button id="zoomReset" class="btn ghost" title="Reset zoom">100%</button>
                 <button id="zoomIn" class="btn ghost" title="Zoom in">+</button>
                 <div class="sep"></div>
-                <button id="fitHeight" class="btn ghost" title="Fit to width">Fit width</button>
-                <button id="fitHeight" class="btn ghost" title="Fit height">Fit height</button>
+                <button id="fitHeight" class="btn ghost" title="Fit to width">Fit height</button>
+                <button id="fitHeight" class="btn ghost" title="Fit height">Fit width</button>
                 <div class="grow"></div>
                 <button id="reloadBtn" class="btn ghost" title="Force reload from diagram.mmd">Reload</button>
                 <button id="exportSvgBtn" class="btn ghost" title="Export current SVG">Export SVG</button>
