changed default to fitHeight

--- a/assets/index.html
+++ b/assets/index.html
@@ -248,7 +248,7 @@
                 <button id="zoomReset" class="btn ghost" title="Reset zoom">100%</button>
                 <button id="zoomIn" class="btn ghost" title="Zoom in">+</button>
                 <div class="sep"></div>
-                <button id="fitHeight" class="btn ghost" title="Fit to width">Fit width</button>
+                <button id="fitWidth" class="btn ghost" title="Fit to width">Fit width</button>
                 <button id="fitHeight" class="btn ghost" title="Fit height">Fit height</button>
                 <div class="grow"></div>
                 <button id="reloadBtn" class="btn ghost" title="Force reload from diagram.mmd">Reload</button>
@@ -274,7 +274,7 @@
         const zoomInBtn = $('zoomIn');
         const zoomOutBtn = $('zoomOut');
         const zoomResetBtn = $('zoomReset');
-        const fitWidthBtn = $('fitHeight');
+        const fitWidthBtn = $('fitWidth');
         const fitHeightBtn = $('fitHeight');
         const reloadBtn = $('reloadBtn');
         const exportSvgBtn = $('exportSvgBtn');
@@ -287,7 +287,7 @@
         let lastDiagramText = null;
         let lastError = '';
         let zoom = 1;
-        let fitMode = 'width'; // default to auto-fit width
+        let fitMode = 'height'; // default to auto-fit width
         const loadedPacks = new Set();
         let pollTimer = null;
 
