changed default to height

--- a/assets/index.html
+++ b/assets/index.html
@@ -458,7 +458,7 @@
             removeMermaidErrorArtifacts();
             await sync(true);
             startPolling();
-            setFitMode('width'); // responsive default
+            setFitMode('height'); // responsive default
         })();
 
         themeBtn.addEventListener('click', toggleTheme);
